# simple-i18n

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
examples/: custom_provider.rs  eu_ru_localization.rs  eu_ru_localization_incl_dir.rs  eu_ru_localization_with_state.rs  file_change.rs  macro.rs  macro_with_custom_provider.rs  macro_with_incl_dir.rs
resources/en_ru/: I18N_EE.yml  I18N_EN.yaml  I18N_RU.yaml
scheme/: locale-scheme.json
src/: feature_macro.rs  lib.rs
