[package]
name = "simple-i18n"
version = "0.1.0"
edition = "2021"
exclude = [
    "examples/*",
    "resources/*",
    ".github/*"
]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sys-locale = "0.1.0"
log = "0.4.14"
notify = "5.0.0-pre.13"
err-derive = "0.3.0"
# Ser/deser yaml
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8.21"
include_dir = { version = "0.6.2", optional = true }

[features]
default = []
incl_dir = ["include_dir"]
