[package]
name = "sorrow-i18n"
version = "0.1.0"
edition = "2021"
exclude = [
    "examples/*",
    "resources/*",
    ".github/*",
    "scheme/*",
]
license = "MIT"
readme = "README.md"
repository = "https://github.com/SinmoWay/simple-i18n"
keywords = ["internationalization", "i18n", "simple-i18n"]
categories = ["internationalization"]
description = "Simple I18N implementation with the ability to update localizations in real time"

[dependencies]
sys-locale = "0.1.0"
log = "0.4.14"
notify = "5.0.0-pre.13"
err-derive = "0.3.0"
# Ser/deser yaml
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8.21"
include_dir = { version = "0.6.2", optional = true }

[features]
default = []
incl_dir = ["include_dir"]
